--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@animatereactnative/marquee": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/blur": "^4.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.20",
     "immer": "^10.0.2",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-marquee": "^0.5.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-splash-screen": "^3.3.0",
